# microshop

./: .gitignore  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
alembic/: env.py
alembic/versions/: 2025_12_16_2026-68a73ffbd538_create_products_table.py  2025_12_19_1816-83955b5ae4d3_create_users_table.py  2025_12_19_2305-771200fa6d44_create_roles_table.py  2025_12_19_2305-f15fb2ad8929_create_products_table.py  2025_12_19_2306-d65664c84353_create_users_table.py  2025_12_19_2331-5b935fd0eaf0_add_role_id_to_users.py  2025_12_19_2334-f5c9d2c043cc_create_roles_table.py  2026_01_07_1544-5f1d74f611ed_update_product_price_to_integer.py  2026_01_07_1606-322309dfa841_create_permissions_table.py  2026_01_07_1607-caf70e658484_create_role_permission_assoc_table.py  2026_01_08_2128-4c33391448a2_create_cart_table.py  2026_01_09_1652-9ccd7e702f59_create_cart_items_assoc_table.py  2026_01_09_2150-eda57297c5e0_create_orders_table.py  2026_01_09_2250-4bf6f34c76cd_create_order_product_assoc.py  2026_01_09_2300-17f50d957caf_changed_the_properties_of_orders.py  2026_01_21_1726-a467261b3af2_alter_column_order_state_set_default_.py
microshop/: main.py
microshop/api_v1/: __init__.py
microshop/api_v1/admin/: __init__.py  crud.py  schemas.py  views.py
microshop/api_v1/auth/: crud.py  dependencies.py  jwt.py  schemas.py  views.py
microshop/core/: config.py
tests/: conftest.py  test_auth.py  test_smoke.py
tests/fixtures/: permissions.py  product.py  users.py
tests/permission/: conftest.py  test_permissions_cart.py  test_permissions_order.py  test_permissions_product.py
(+34 files in other folders)
